* applied Eclipse enhanced for loop code cleanup * fixed some PMD warnings